# lxrpy

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_tests.py
lxr/: __init__.py  config.py  enums.py  kit.py  pattern.py  project.py
lxr/scripts/: __init__.py  clean_card.py  copy_to_card.py  list_card.py
lxr/templates/: GLO.CFG  TEMPLATE.PAT  TEMPLATE.SND
tests/: __init__.py  test_config.py  test_kit.py  test_pattern.py  test_project.py
